--- a/links.html
+++ b/links.html
@@ -8,16 +8,16 @@
 
   <meta property="og:locale" content="pt-BR">
   <meta property="og:url" content="">
-  <meta property="og:title" content="Lucas Ângelo | Links">
-  <meta property="og:site_name" content="Lucas Ângelo | Links">
+  <meta property="og:title" content="Prem Sagar Gupta | Links">
+  <meta property="og:site_name" content="Prem Sagar Gupta | Links">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Here you can get all links to my social networks and more.">
-  <meta property="og:image" content="https://github.com/Lucas-Angelo.png" />
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/101566046?v=4" />
   <meta property="og:image:width" content="600">
   <meta property="og:image:height" content="600">
   <meta name="google-site-verification" content="NB2AxCBdxkHWO3A4SCAQHOphpddd7DgOlJjuiVwGu6k" />
 
-  <title>Lucas Ângelo | Links</title>
+  <title>Prem Sagar Gupta | Links</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/links/style.css">
@@ -25,29 +25,29 @@
 
 <body class="fadeIn">
   <div id="container">
-    <a class="profile_link" href="https://github.com/Lucas-Angelo.png" target="_blank" rel="noopener noreferrer">
-      <img class="profile" src="https://github.com/Lucas-Angelo.png" alt="Profile">
+    <a class="profile_link" href="https://avatars.githubusercontent.com/u/101566046?v=4" target="_blank" rel="noopener noreferrer">
+      <img class="profile" src="https://avatars.githubusercontent.com/u/101566046?v=4" alt="Profile">
     </a>
 
     <div class="links-container">
       <strong class="description">Getting in touch! 👋</strong>
 
-      <a class="link" href="https://github.com/Lucas-Angelo" target="_blank">
+      <a class="link" href="https://github.com/premsg1610" target="_blank">
         <img class="logo" src="./assets/img/links/github.svg" alt="GitHub Logo">
         GitHub
       </a>
 
-      <a class="link" href="https://www.linkedin.com/in/Lucas-Angelo/" target="_blank">
+      <a class="link" href="https://www.linkedin.com/in/prem-sagar-gupta-0b7083148/" target="_blank">
         <img class="logo" src="./assets/img/links/linkedin.svg" alt="Linkedin Logo">
         Linkedin
       </a>
 
-      <a class="link" href="https://www.youtube.com/channel/UC7-8rt7JfhsmVpe-KAlaLHw" target="_blank">
+      <a class="link" href="https://www.youtube.com/channel/UCz6DBjZAJtXkjVh50oW_kHg" target="_blank">
         <img class="logo" src="./assets/img/links/youtube.svg" alt="Youtube Logo">
         Youtube
       </a>
 
-      <a class="link" href="https://www.instagram.com/lcs2001_/" target="_blank">
+      <a class="link" href="https://instagram.com/premi_0207?igshid=YmMyMTA2M2Y=" target="_blank">
         <img class="logo" src="./assets/img/links/instagram.svg" alt="Instagram Logo">
         Instagram
       </a>
@@ -55,11 +55,11 @@
     </div>
 
     <footer>
-      Lucas Ângelo
+      Prem Sagar Gupta
       <p>
-        Engenharia de Software na
-        <a href="https://www.pucminas.br/unidade/praca-da-liberdade/ensino/graduacao/Paginas/Engenharia-de-Software.aspx"
-          target="_blank">@PucMinas</a> 📚
+        Java Developer
+        <a href="http://gecdelhi.ac.in/"
+          target="_blank">Netaji Subhas University (West Campus)</a> 📚
       </p>
     </footer>
   </div>
